⚡️ Enhance payband reset method performance